update get recent search profiles
